--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,7 +3,7 @@ spring:
   datasource:
     url: jdbc:mysql://39.100.39.63:3306/db_gupao_springboot?useUnicode=true&characterEncoding=UTF-8&serverTimezone=UTC
     username: root
-    password: 123456
+    password: abc123
     driver-class-name: com.mysql.cj.jdbc.Driver
 
 #mybatis托管mapper文件
